<resources>
    <string name="app_name">GoKenya</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="about">Go Kenya Tours and Safari stands out to be one of the most reputable indigenous owned Tours and Safari Companies in Kenya with tour packages to Kenya,Uganda,Tanzania and Zanzibar.It is a fully registered Safari and Tour Operator,Incorporated in Nairobi-Kenya with its Head Office in Nairobi.</string>
    <string name="title">About Go Kenya Safari</string>
    <string name="quote">  \" We can beat any safari quote just give us your safari holiday budget and we will work out the best options that fits your budget\" </string>
    <string name="abouttwo">Today we have emerged to be one of the most sought after Safari and Tour Operator\'s in East Africa due to our expertise and knowledge of the wildlife history and habitat as well as provision of Safari holiday planning and ground handling services by online and overseas Travel Agents</string>
    <string name="aboutthree">Whether you want to plan the perfect honeymoon,the daring East African Adventure Holiday,the ultimate Kenya,Uganda and Tanzania safari or a unique family vacation,Go Kenya Tours and Safari offers it all.Go Kenya Tours and Safari is here to offer you picturisque Africa safaris,ecotourism and adventure travel.</string>
    <string name="aboutfour">All of our trips are customized to enable you touch of Africa cultural and modern lifestyle,as well as wildlife.However we tailor-made to our guests\' specifications-so no two trips will be ever alike.Whatever your special interest,we have something that will meet your needs.We do all the research,plan your itenarary,provide necessary information and cover all the details-all you need is to pack your bag and prepare for the African Vacation of a lifetime.</string>
    <string name="services">OUR SERVICES</string>
    <string name="aboutfive">Our clients enjoy the services of our dependable connections through Kenya,Tanzania and Uganda.This means we will take care of all your holiday planning and ground handling logistics from meet and great formalities, assistance at the Airport and hotel upon arrived,transfers to the respective hotels,accommodation arrangements and bookings,Tours and Safari organizations,conferences and Group incentives to any destination of your choice in East Africa.</string>
    <string name="aboutsix">In summary,we offer appropriate professional advice and guidance on a particular inquiry and assist in the coordination of the final product.</string>
    <string name="customers">OUR CUSTOMERS</string>
    <string name="aboutseven">Our culture of putting customers first ,teamwork and on time service delivery has played a key role in our success.We evaluate our clients\' needs and then create tailor-made solutions whilst allowing room for future growth and expansion, in line with the rapidly changing face of the global Travel industry.</string>
    <string name="abouteight">Our client portfolio include Missionary groups,Research student organizations,corporate incentive organizers,Conference organizers,Non Governmental organizations and online individual inquirers.</string>
    <string name="our_experience">OUR EXPERIENCE</string>
    <string name="experience_about">Our long term experience of working closely wth a wide range of clients and facing various kind of scenarios has given us a unique balance of skills between knowing what is out there in terms of our clients\' needs and understanding our market to make sure that our products are not only plausible but also possible and affordable.</string>
    <string name="our_drivers_guides">OUR DRIVERS/GUIDES</string>
    <string name="drivers_about">All our Drivers/Guides are native,well trained and excellent driving experience,game viewing and wide knowledge about their Culture,Wildlife,Birdlife and Plants.</string>
    <string name="drivers_about_two">As we are well aware that the success of our Company is dependent on the expertise of Drivers/Guides,we have invested heavily in Professional training.They regularly undergo vigorously training courses in our recognized hospitality institutions inorder to maintain the set standards in Tourism industry.</string>
    <string name="why_book_us">Why Book with Go Kenya Tours and Safaris</string>
    <string name="knowledge">1.Knowledge of our Product</string>
    <string name="about_knowledge">Go Kenya Tours and Safari are specialists;We sell the East African tourist attractions ,and we know our products extremely well.</string>
    <string name="passion">2.Passion</string>
    <string name="about_passion">We love Africa.For Go Kenya Tours and Safari,it is in our blood and Africa will be always our true home.We feel intimately connected with East Africa environment and its wildlife.Africa has a way of getting inside you and touching your soul..it\'s a remarkable feeling for those who experience it and we are both constantly to experience more.Africa is our passion and we get a wonderful pleasure from introducing new guests or helping past visitors to reconnect with all East Africa has to offer.</string>
    <string name="price_value">3.Price/Value</string>
    <string name="about_price">You will pay the same(but usually even less)booking your Kenyan,Ugandan,or Tanzania Safari holiday with us by booking directly with East Africa lodges and camps.You do not pay extra for our services,rather we receive discounted rates from these accommodation facilities during the safari,add our markups,and still pass along the net savings to our guests. </string>
    <string name="about_two_price">In addition,you have the assurance that your trip is being planned and your booking handled by experienced and passionate native safari experts on hand to answer all your questions before you travel.  </string>
    <string name="about_three_price">Our trips have no hidden costs.We do not quote you a low price and then tell you later that,In addition,you have to pay additional fees or that inter-country transportation is extra.When we quote on a safari tour,practically expect gratuities,personal purchases and perhaps imported liquors are typically included in the costs.We will always inform you upfront on any additional cost.</string>
    <string name="about_four_price">Finally we do not attempt to offer cut-rate pricing for a lesser quality experience to attract guests; rather,we strive to offer the best value no matter the level of pricing or luxury and we only work with partners in East African who offer search a value.</string>
    <string name="our_location">Our Location</string>
    <string name="inquire_here">Inquire Here</string>
    <string name="title_activity_location">Map</string>
    <string name="kenya_safari_beach"><![CDATA[Kenya Safari & Beach]]></string>
    <string name="kenya_safari_beach_packages"><![CDATA[Kenya Safari & Beach Packages]]></string>
    <string name="masai_mara_day_one">Day 1;NAIROBI-MASAI MARA</string>
    <string name="day_one_masai_mara">Pickup from the airport or place of Residence in Nairobi at 7:00am,Your safari takes you to the Masai Mara Reserve and into the domain of the Maasai,Kenya\'s cattle-herding nomads determined to preserve their traditions.The Mara is magnificent,home to Kenya\'s richest concentration of wildlife and regarded by many travelers as an essential stop of any tour of Africa.When westerners think of Africa and safari this is the place they imagine.Three days here will only scratch at the surface of the wonders of Mara.</string>
    <string name="masai_mara_day_two">Day 2;MASAI MARA</string>
    <string name="day_two_masai_mara">Spend the day in Masai Mara,Kenya\'s most popular game reserve where you will have the best opportunity of spotting the Big-Five lion,rhino,buffalo,leopard and elephant,Game Drives are flexible,with the option of going out with the picnic lunch boxes to spend the entire day in the park,or you can choose to have an early morning and late afternoons Game Drives.You will also have an option of visiting a local Masai Village(at a cost of US$20 per person)</string>
    <string name="masai_mara_day_three">Day 3;MASAI MARA-NAIROBI</string>
    <string name="day_three_masai_mara">Early morning breakfast at your camp,check of the camp and park and drive to Nairobi arriving in time for lunch.Lunch at carnivore afterwards drop off at your respective hotel or airport at 3:30pm </string>
    <string name="include_one">-Rescue Insurance(AAR)</string>
    <string name="include_two">-Full board accommodation while on safari.</string>
    <string name="include_three">-Meal plan as described,B=Breakfast,L=Lunch and D=Dinner.</string>
    <string name="include_four">-Accommodation in double room sharing</string>
    <string name="include_five">-All park entrance fees to include government taxes and service.</string>
    <string name="include_six">-English speaking professional driver/guide.</string>
    <string name="include_seven">-Exclusive transport in a safari tour mini bus 4*4 with a game viewing.</string>
    <string name="include_eight">-Roof hatch and UHF radio.</string>
    <string name="price_about">Price depends on the level of accommodation as shown below:</string>
    <string name="option_one">Overnight at Manyatta Camp;</string>
    <string name="price_one">Package price per person US$650</string>
    <string name="option_two">Mara Sopa Lodge or OlMoran Luxury Camp or Sentrim Masai Mara Camp</string>
    <string name="price_two">Rate are in US$ per person US$776  </string>
    <string name="option_three">Using Sarova Mara game Camp or Ashnil Masai Mara</string>
    <string name="price_three">Package price per person US$999</string>
    <string name="option_four">Using Mara Serena Safari Lodge</string>
    <string name="price_four">Package price per person US$1029</string>
    <string name="price_include">Price Include</string>
    <string name="price_exclude">Price Exclude</string>
    <string name="one_exlusion">-International Flights</string>
    <string name="two_exlusion">-Cultural Visits</string>
    <string name="three_exclusion">-Expenses of personal nature such as visas,travel/baggage insurance,laundry,beverages,tips etc.</string>
    <string name="about_price_masai_mara">Price depends on the level of accommodation shown below:</string>
    <string name="accommodation_one">Mara Sopa Lodge or Sentrim Masai Mara Camp</string>
    <string name="accommodation_two">Lake Nakuru Lodge or Flamingo Hill Tented Camp</string>
    <string name="rate_one">Rate are in US$ per person US$999</string>
    <string name="accommodation_three">Accommodation at Sarova Mara Game or Ashnil Masai Mara</string>
    <string name="accommodation_four">Sarova Lion Hill Lodge Lake Nakuru</string>
    <string name="rate_two">Package price per person US$1415</string>
    <string name="accommodation_five">Using Mara Serena Safari Lodge  </string>
    <string name="accommodation_six">Sarova Lion Hill Lake Nakuru</string>
    <string name="rate_three">Package Price per person US$1560</string>
</resources>