<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LakeNakuruTopTour.PriceNakuru">

    <TextView
        android:id="@+id/accommodation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_price_masai_mara"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/accommodation_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accommodation_one"
        android:layout_below="@+id/accommodation"
        android:textColor="@android:color/white"
       android:textAlignment="center"
        android:textStyle="italic|bold"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/accommodation_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accommodation_two"
        android:layout_below="@+id/accommodation_one"
        android:textColor="@android:color/white"
        android:textStyle="italic|bold"
        android:textAlignment="center"
        android:textSize="17sp"
        />
    <TextView
        android:id="@+id/rate_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_one"
        android:layout_below="@id/accommodation_two"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"

        />
    <TextView
        android:id="@+id/accommodation_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accommodation_three"
        android:layout_below="@+id/rate_one"
        android:textColor="@android:color/white"
        android:textStyle="italic|bold"
        android:textAlignment="center"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/accommodation_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accommodation_four"
        android:layout_below="@+id/accommodation_three"
        android:textColor="@android:color/white"
        android:textStyle="italic|bold"
       android:textAlignment="center"
        android:textSize="17sp"

        />
    <TextView
        android:id="@+id/rate_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_two"
        android:layout_below="@id/accommodation_four"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"

        />
    <TextView
        android:id="@+id/accommodation_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accommodation_five"
        android:layout_below="@+id/rate_two"
        android:textColor="@android:color/white"
        android:textStyle="italic|bold"
       android:textAlignment="center"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/accommodation_six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accommodation_six"
        android:layout_below="@+id/accommodation_five"
        android:textColor="@android:color/white"
        android:textStyle="italic|bold"
         android:textAlignment="center"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/rate_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_three"
        android:layout_below="@id/accommodation_six"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"

        />
</RelativeLayout>